# 2d-movie-theater

./: .gitignore  README.md
Kostur/: CMakeLists.txt  Kostur.vcxproj  Kostur.vcxproj.filters  Shader.cpp  Shader.h  stb_easy_font.cpp  stb_easy_font.h
Kostur/Shaders/: quad.frag  quad.vert
Kostur/Source/: Main.cpp
include/: Shader.cpp  Shader.h  stb_easy_font.h
src/: main.cpp
